// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`game > Spinner > Renders 1`] = `
<div>
  <div
    class="Spinner"
  >
    <svg
      class="Spinner_svg"
      height="40"
      version="1"
      viewBox="0 0 40 40"
      width="40"
    >
      <circle
        cx="20"
        cy="20"
        id="bg"
        r="18"
      />
      <circle
        cx="20"
        cy="20"
        id="fg"
        r="18"
      />
    </svg>
  </div>
</div>
`;

exports[`game > Spinner > Renders with all props 1`] = `
<div>
  <div
    class="Spinner test"
  >
    <svg
      class="Spinner_svg"
      height="40"
      version="1"
      viewBox="0 0 40 40"
      width="40"
    >
      <circle
        cx="20"
        cy="20"
        id="bg"
        r="18"
      />
      <circle
        cx="20"
        cy="20"
        id="fg"
        r="18"
      />
    </svg>
  </div>
</div>
`;
